# xdot_cpp

./: .gitignore  CMakeLists.txt  FINAL_SUMMARY.md  PROJECT_SUMMARY.md  README.md  STRESS_TEST_RESULTS.md  quick_test.sh  run_stress_tests.sh  test_functionality.sh
.openhands/microagents/: repo.md
examples/: complex.dot  simple.dot
include/xdot_cpp/: xdot_cpp.h
include/xdot_cpp/dot/: lexer.h  parser.h
include/xdot_cpp/ui/: dot_widget.h  dot_window.h  graphics_items.h
include/xdot_cpp/xdot/: color.h  elements.h  graph.h  pen.h  xdot_parser.h
src/: main.cpp
src/dot/: lexer.cpp  parser.cpp
src/ui/: dot_widget.cpp  dot_window.cpp
src/xdot/: color.cpp  elements.cpp  graph.cpp  xdot_parser.cpp
tests/: edge_cases.dot  large_graph.dot  nested_subgraphs.dot  shapes_test.dot  undirected_graph.dot  unicode_test.dot
